--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="top">
     <img class="top-cloud" src="img/cloud.png" alt="cloud">
     <h1>I'm Dylan</h1>
-    <h2>web design</h2>
+    <h2>web designer</h2>
     <img class="bottom-cloud" src="img/cloud.png" alt="cloud">
     <img src="img/mountain.png" alt="mountain">
   </div>
